# scrcpy-launcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: actions.test.ts  actions.ts  events.test.ts  events.ts  main.ts  render.test.ts  render.ts  state.test.ts  state.ts  styles.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  cache.rs  commands.rs  discovery.rs  icon.rs  lib.rs  main.rs  platform.rs  runtime.rs  settings.rs  types.rs  web.rs  worker.rs
